--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" />
     <script src="https://unpkg.com/blotterjs-fork@0.1.0/build/blotter.min.js"></script>
-    <title>React App</title>
+    <title>Color Code</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
